--- a/mark/index.html
+++ b/mark/index.html
@@ -18,7 +18,7 @@
         <h1>Welkom op mijn territorium. <br>Mijn naam is Maui en het is leuk je te ontmoeten.</h1>
         <hr>
         <p class="fs-2">Hi thereee!</p>
-        <!--<br><img src="seal_sleep.gif" alt="Sleeping Seal">-->
+        <br><img src="seal_sleep.gif" alt="Sleeping Seal">
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
